--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
     <main>
         <section id="section01">
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <h5 class="light">Scritto da <span class="text-higlight">The Booleaner</span></h5>
+            <h5 class="light">Scritto da <span class="text-highlight">The Booleaner</span></h5>
             <small class="light">il 10/10/2020</small>
         </section>
 
         <section id="section02">
             <img src="media/tim-1.jpg" alt="John S. and James L. Knight Foundation, by Scott Henrichsen">
-            <img src="media/tim-1.jpg" alt="Foto Tim Berners-Lee">
-            <small>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</small>
-            <small>2nd Photo: Wikimedia, by Paul Clark</small>
+            <img src="media/tim-2.jpg" alt="Foto Tim Berners-Lee">
+            <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+            <p>2nd Photo: Wikimedia, by Paul Clark</p>
         </section>
 
-        <section>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sunt vero dignissimos <span class="text-higlight">inventore quas accusantium eum odit alias aliquam</span>maiores veritatis quam, in incidunt assumenda beatae hic impedit quibusdam obcaecati est a quod voluptas laudantium dicta vitae. Exercitationem, placeat veniam!</p>
+        <section id="section03">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi ex voluptatem velit dolor, asperiores beatae officia quidem, sed doloremque nisi illo. Dolorum deserunt aut fugiat odit voluptate alias nobis error provident asperiores! Rerum magnam est officiis fugit neque iusto dolorum nihil <span class="back-highlight">voluptas odit, nulla perferendis, laudantium quidem quae, iste fuga placeat adipisci</span> doloribus nostrum molestias. Laboriosam soluta repellat saepe quae veniam id qui eius non voluptatibus repudiandae architecto necessitatibus expedita velit esse itaque commodi excepturi veritatis illum fugiat, praesentium in nulla quis! Est, quia delectus. Doloremque commodi deleniti nulla. Ea, placeat pariatur. Assumenda provident, est quae veritatis porro error aliquam?</p>
             <ul>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos veniam laboriosam laborum, fuga nesciunt dignissimos quod rerum repudiandae! Nisi, error!</li>
                 <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores sequi odit tenetur omnis? Modi, autem.</li>
                 <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea tempore error natus odit ipsam aliquam. Distinctio velit animi asperiores placeat esse?</li>
             </ul>
 
-            <table>
+            <table cellspacing="0">
                 <thead>
                     <tr>
                         <th>
@@ -47,40 +47,39 @@
                         <th>
                             Lorem ipsum dolor
                         </th>
-                        <th>
+                        <th class="large-column">
                             Lorem ipsum dolor
                         </th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr class="row-highlight">
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, tempora. Nesciunt, nulla?</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, in dicta dolor unde sit adipisci fuga! Libero nam ratione velit impedit voluptatibus ab corporis sint, magnam eum, fuga magni est itaque quas cum optio iusto minus ipsum repellat sequi numquam ea nobis eius dolorem? Pariatur dolorem minima, amet nam odio officiis impedit voluptate, voluptatem ipsam architecto beatae porro obcaecati qui!</td>
                     </tr>
                     <tr>
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, tempora. Nesciunt, nulla?</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, in dicta dolor unde sit adipisci fuga! Libero nam ratione velit impedit voluptatibus ab corporis sint, magnam eum, fuga magni est itaque quas cum optio iusto minus ipsum repellat sequi numquam ea nobis eius dolorem? Pariatur dolorem minima, amet nam odio officiis impedit voluptate, voluptatem ipsam architecto beatae porro obcaecati qui!</td>
                     </tr>
-                    <tr>
+                    <tr class="row-highlight">
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, tempora. Nesciunt, nulla?</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, in dicta dolor unde sit adipisci fuga! Libero nam ratione velit impedit voluptatibus ab corporis sint, magnam eum, fuga magni est itaque quas cum optio iusto minus ipsum repellat sequi numquam ea nobis eius dolorem? Pariatur dolorem minima, amet nam odio officiis impedit voluptate, voluptatem ipsam architecto beatae porro obcaecati qui!</td>
                     </tr>
                 </tbody>
             </table>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sunt vero dignissimos <span class="text-higlight">inventore quas accusantium eum odit alias aliquam</span>maiores veritatis quam, in incidunt assumenda beatae hic impedit quibusdam obcaecati est a quod voluptas laudantium dicta vitae. Exercitationem, placeat veniam!</p>
-
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi ex voluptatem velit dolor, asperiores beatae officia quidem, sed doloremque nisi illo. Dolorum deserunt aut fugiat odit voluptate alias nobis error provident asperiores! Rerum magnam est officiis fugit neque iusto dolorum nihil voluptas odit, nulla perferendis, laudantium quidem quae, iste fuga placeat adipisci doloribus nostrum molestias. Laboriosam soluta repellat saepe quae veniam id qui eius non voluptatibus repudiandae architecto necessitatibus expedita velit esse itaque commodi <span class="back-highlight">excepturi veritatis illum fugiat, praesentium in nulla quis! Est, quia delectus. Doloremque commodi deleniti nulla. Ea, placeat pariatur</span>. Assumenda provident, est quae veritatis porro error aliquam?</p>
         </section>
 
-        <section>
-            <h5>Potrebbero interessarti</h5>
-            <div class="img">
+        <section id="section04">
+            <h5 class="light">Potrebbero interessarti</h5>
+            <div id="first-image" class="image">
                 <p>Lorem, ipsum dolor.</p>
             </div>
-            <div class="img">
+            <div id="second-image" class="image">
                 <p>Lorem, ipsum dolor.</p>
             </div>
         </section>
